--- a/moccasin.toml
+++ b/moccasin.toml
@@ -8,6 +8,12 @@ default_network_name = "mainnet-fork"
 [networks.contracts]
 weth = { abi = "abis/weth.json" }
 usdc = { abi = "abis/usdc.json" }
+aavev3_pool_address_provider = { abi = "abis/aavev3_pool_address_provider.json" }
+pool = { abi = "abis/aavev3_pool.json" }
+aavev3_protocol_data_provider = { abi = "abis/aavev3_protocol_data_provider.json" }
+eth_usd_price_feed = { abi = "abis/price_feed_contract.json" }
+usdc_usd_price_feed = { abi = "abis/price_feed_contract.json" }
+uniswap_swap_router = { abi = "abis/uniswap_swap_router.json" }
 
 [networks.mainnet-fork]
 fork = true
@@ -18,7 +24,11 @@ unsafe_password_file = "$UNSAFE_PASSWORD_FILE"
 [networks.mainnet-fork.contracts]
 weth = { address = "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2" }
 usdc = { address = "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48" }
-
+aavev3_pool_address_provider = { address = "0x2f39d218133AFaB8F2B819B1066c7E434Ad94E9e" }
+aavev3_protocol_data_provider = { address = "0x41393e5e337606dc3821075Af65AeE84D7688CBD" }
+eth_usd_price_feed = { address = "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419" }
+usdc_usd_price_feed = { address = "0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6" }
+uniswap_swap_router = { address = "0x68b3465833fb72A70ecDF485E0e4C7bD8665Fc45"}
 
 
 # You can view all configuration options at https://cyfrin.github.io/moccasin/all_moccasin_toml_parameters.html
